# SGParser

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  build.ps1  build.sh
doc/: SGYacc_Grammar_Notes.md
prebuilt/macos_10.5.5/: sgyacc
prebuilt/macos_10.5.7/: sgyacc
prebuilt/ubuntu_18.04/: sgyacc
prebuilt/ubuntu_20.04/: sgyacc
projects/cmake/: AppleClang.cmake  Clang.cmake  GNU.cmake  MSVC.cmake  RemoveOptionByPattern.cmake
projects/vs2019/: SGParser.sln
projects/vs2019/Parser/: Parser.vcxproj  Parser.vcxproj.filters
projects/vs2019/ParserGen/: ParserGen.vcxproj  ParserGen.vcxproj.filters
projects/vs2019/SGYacc/: SGYacc.vcxproj  SGYacc.vcxproj.filters
samples/: CMakeLists.txt  README.md
samples/calc/: CMakeLists.txt  Calc.sln  Calc.vcxproj  Calc.vcxproj.filters  README.md  generate.bat  generate.ps1  generate.sh  generate_rus.bat  generate_rus.sh
samples/calc/src/: CMakeLists.txt  Calc.cpp  Calc.gr  CalcParser.h  CalcParser.hpp  Calc_rus.gr  StdStreamAdapter.h  StdStreamAdapter.hpp  test-expressions-rus.txt  test-expressions.txt
src/: CMakeLists.txt
src/Parser/: BacktrackingTokenStream.h  CMakeLists.txt  DFA.cpp  DFA.h  DFATokenizer.h  LexemeInfo.h  MappedTable.h  ParseTable.cpp  ParseTable.h  ParseTableType.h  Parser.h  ProductionMask.h  Tokenizer.h  TokenizerBase.cpp  TokenizerBase.h
src/Parser/Kernel/: SGDebug.h  SGStream.h  SGString.h
src/ParserGen/: CMakeLists.txt  DFAGen.cpp  DFAGen.h  FileInputStream.h  FileOutputStream.h  Grammar.cpp  Grammar.h  Lex.cpp  Lex.h  Lexeme.h  NFA.cpp  NFA.h  ParseData.cpp  ParseData.h  ParseMessage.cpp  ParseMessage.h  ParseTableGen.cpp  ParseTableGen.h  Production.cpp  Production.h  RegExpTokenizer.h  RegExprProdEnum.h  StdGrammarLexemeEnum.h  StdGrammarProdEnum.h
src/SGYacc/: CMakeLists.txt  CmdLineGrammar.h  CmdLineParser.cpp  CmdLineParser.h  CmdLineProdEnum.h  FileStream.h  MainSGYacc.cpp
tests/: CPre.ycc  CmdLineParser.gr  README.md
tests/smoke/: README.md  grammar.lst  run.bat  run.ps1  run.sh  smoke.bat  smoke.ps1  smoke.sh
tests/smoke/Calc.gr/Snapshot/: CanonicalData.txt  NonTermEnum.h  NonTermEnumClsStr.h  ProdEnum.h  ProdEnumClsStr.h  ReduceFunction.h  ReduceFunctionClsStr.h  StaticDFA.h  StaticParseTable.h  TermEnum.h  TermEnumClsStr.h
tests/smoke/CmdLineParser.gr/Snapshot/: CanonicalData.txt  NonTermEnum.h  NonTermEnumClsStr.h  ProdEnum.h  ProdEnumClsStr.h  ReduceFunction.h  ReduceFunctionClsStr.h  StaticDFA.h  StaticParseTable.h  TermEnum.h  TermEnumClsStr.h
