# Filename:  CMakeLists.txt
# Content:   Samples root CMake file.
# Provided AS IS under MIT License; see LICENSE file in root folder.

# Set minimum required CMake version.
cmake_minimum_required(VERSION 3.13)

# Set the name of the project.
project(samples CXX)

# Add Calc project file.
add_subdirectory(calc)
